# qt-android-cmake-sample

./: CMakeLists.txt
